--- a/app/src/main/res/layout/item_mahasiswa.xml
+++ b/app/src/main/res/layout/item_mahasiswa.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
+    android:layout_marginLeft="12dp"
+    android:layout_marginRight="12dp"
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp"
     android:orientation="vertical"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="3dp"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
@@ -16,6 +21,7 @@
         tools:ignore="UselessLeaf">
 
         <TextView
+            android:textColor="@color/design_default_color_primary"
             android:id="@+id/tv_nama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,12 +31,14 @@
 
 
         <TextView
+            android:textColor="@color/design_default_color_on_secondary"
             android:id="@+id/tv_jurusan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nama" />
 
         <TextView
+            android:textColor="@color/design_default_color_on_secondary"
             android:id="@+id/tv_semester"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
