--- a/app/src/main/res/layout/item_mahasiswa.xml
+++ b/app/src/main/res/layout/item_mahasiswa.xml
@@ -6,42 +6,60 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="12dp"
     android:layout_marginRight="12dp"
-    android:layout_marginTop="6dp"
-    android:layout_marginBottom="6dp"
     android:orientation="vertical"
     app:cardCornerRadius="10dp"
-    app:cardElevation="3dp"
+    app:cardElevation="6dp"
     app:cardUseCompatPadding="true">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="15dp"
-        tools:ignore="UselessLeaf">
+        android:background="@drawable/bg_card"
+        android:orientation="vertical">
 
-        <TextView
-            android:textColor="@color/design_default_color_primary"
-            android:id="@+id/tv_nama"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="15dp"
+            tools:ignore="UselessLeaf">
+
+            <TextView
+                android:textColor="@color/design_default_color_primary"
+                android:id="@+id/tv_nama"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nama"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nama"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingRight="25dp"
+            android:paddingLeft="15dp"
+            android:background="@drawable/bg_footer_card"
+            android:orientation="vertical">
 
+            <TextView
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:id="@+id/tv_jurusan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nama" />
 
-        <TextView
-            android:textColor="@color/design_default_color_on_secondary"
-            android:id="@+id/tv_jurusan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nama" />
-
-        <TextView
-            android:textColor="@color/design_default_color_on_secondary"
-            android:id="@+id/tv_semester"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Semester" />
+            <TextView
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:id="@+id/tv_semester"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester" />
+        </LinearLayout>
     </LinearLayout>
+
+
 </androidx.cardview.widget.CardView>
